--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ format:
     self-contained: true
     logo: "imagenes/Imagen1.jpg"
     footer: "© Sebastián Egaña Santibáñez"
+    embed-resources: true
 
 editor: visual
 
